
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1972] Added OnTVInputRenderList, OnTVOutputRenderList, and OnTVOutputRenderPropertiesList System Events to allow you to return a path to specify where to look for custom TV files
- Allow separate caching directories for smarty when using different manager themes
- [#MODX-1951] Ensure smarty cache is cleared on site cache clearing and settings
- Ensure admin ACLs are set on new installs
- Added check to modResource::stripAlias to make sure modX object is a modX instance
- Added basic template and default home resource to new installs
- Added load-only and load,list and view policies to build, adjusted setup to handle admin/resource policies with different IDs
- Moved setup's global new/upgrade install scripts to separate files
- MODExt adjustments; main layout now in central viewport so can handle browser resizing, refactored settings grid editing code, IE/FF/Chrome fixes
- [#MODX-1970] Add scheme property to Link Tags to allow canonical, https, or any URL generation scheme from modX::makeUrl()
- Fixed bug where core namespace was not in build
- Update xPDO to revision 424 for fixes related to PDOException reporting
- Ensure packages are unpacked after downloading
- Fixed bug with removing a plugin
- Added System Setting, 'cache_noncore_lexicon_topics', which can be used to disable caching on noncore lexicon topics, which is useful for 3PC development.
- Deprecated modPackageBuilder::buildLexicon
- Completely refactored the Lexicon system to now do file-based Lexicon Entries only. DB entries are only for overrides. This allows for proper overriding of
core lexicon entries, caches faster, and allows for much easier 3PC development.