@@ -33,6 +33,11 @@ $_lang['perm.delete_snippet_desc'] = 'To delete or remove any Snippets.';
 $_lang['perm.delete_template_desc'] = 'To delete or remove any Templates.';
 $_lang['perm.delete_tv_desc'] = 'To delete or remove any Template Variables.';
 $_lang['perm.delete_user_desc'] = 'To delete or remove any Users.';
+$_lang['perm.directory_chmod_desc'] = 'To chmod a physical directory.';
+$_lang['perm.directory_create_desc'] = 'To create a physical directory.';
+$_lang['perm.directory_list_desc'] = 'To list subdirectories for a physical directory.';
+$_lang['perm.directory_remove_desc'] = 'To remove a physical directory.';
+$_lang['perm.directory_update_desc'] = 'To rename a physical directory.';
 $_lang['perm.edit_category_desc'] = 'To edit any Categories.';
 $_lang['perm.edit_chunk_desc'] = 'To edit any Chunks.';
 $_lang['perm.edit_context_desc'] = 'To edit any Contexts.';
@@ -50,8 +55,13 @@ $_lang['perm.empty_cache_desc'] = 'To empty the site cache.';
 $_lang['perm.error_log_erase_desc'] = 'To erase the error log.';
 $_lang['perm.error_log_view_desc'] = 'To view the error log.';
 $_lang['perm.export_static_desc'] = 'To export the site to static HTML.';
-$_lang['perm.file_manager_desc'] = 'To use the file manager, including creating/deleting files.';
+$_lang['perm.file_list_desc'] = 'To list files within a given physical directory.';
+$_lang['perm.file_manager_desc'] = 'To use the file manager utility.';
+$_lang['perm.file_remove_desc'] = 'To remove physical files.';
 $_lang['perm.file_tree_desc'] = 'To view the Files Tree on the left nav.';
+$_lang['perm.file_update_desc'] = 'To update the content of physical files.';
+$_lang['perm.file_upload_desc'] = 'To upload files to a directory.';
+$_lang['perm.file_view_desc'] = 'To view the contents of a file.';
 $_lang['perm.flush_sessions_desc'] = 'Can flush Sessions across the site.';
 $_lang['perm.frames_desc'] = 'To use the MODx Manager UI at all.';
 $_lang['perm.help_desc'] = 'To view the Help page.';
