@@ -9,7 +9,7 @@
  * @package modx
  * @subpackage processors.browser.file
  */
-if (!$modx->hasPermission('file_manager')) return $modx->error->failure($modx->lexicon('permission_denied'));
+if (!$modx->hasPermission('file_update')) return $modx->error->failure($modx->lexicon('permission_denied'));
 $modx->lexicon->load('file');
 
 /* get base paths and sanitize incoming paths */
