@@ -5,7 +5,7 @@
  * @package modx
  * @subpackage manager.system.file
  */
-if (!$modx->hasPermission('file_manager')) return $modx->error->failure($modx->lexicon('access_denied'));
+if (!$modx->hasPermission('file_view')) return $modx->error->failure($modx->lexicon('access_denied'));
 if (empty($_GET['file'])) return $modx->error->failure($modx->lexicon('file_err_nf'));
 
 $filename = preg_replace('#([\\\\]+|/{2,})#', '/',$_GET['file']);
